# pocket-riscv-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  run.txt
src/: irect2.rs  main.rs
